# ControlManager

./: .gitignore  CMakeLists.txt  README.md  config.json
scripts/: build.sh  install.sh  setup.sh
scripts/services/: ControlManager.service
src/: CMakeLists.txt  main.cpp  main.hpp
src/base/: CMakeLists.txt  common.hpp
src/base/hardwares/: CMakeLists.txt  common.hpp  factories.hpp
src/base/hardwares/cpus/inc/: cpus.hpp
src/base/hardwares/gpus/inc/: gpus.hpp
src/base/hardwares/motherboards/inc/: motherboards.hpp
src/base/utilities/: CMakeLists.txt  common.hpp
src/base/utilities/commanders/inc/: commanders.hpp
src/base/utilities/commanders/src/: commanders.cpp
src/communicators/: CMakeLists.txt  common.hpp
src/communicators/internets/inc/: internets.hpp
src/communicators/internets/src/: internets.cpp
src/communicators/miners/inc/: miners.hpp
src/communicators/miners/src/: miners.cpp
src/communicators/web_interfaces/inc/: web_interfaces.hpp
src/kernel/: CMakeLists.txt  common.hpp
src/kernel/exceptions/: CMakeLists.txt  common.hpp
src/kernel/exceptions/inc/: exceptions.hpp
src/kernel/shells/: CMakeLists.txt
src/kernel/shells/commands/inc/: abstracts.hpp  commands.hpp
src/kernel/shells/commands/src/: abstracts.cpp
src/kernel/shells/executors/inc/: executors.hpp
src/kernel/shells/executors/src/: executors.cpp
src/kernel/sockets/: CMakeLists.txt  common.hpp
src/kernel/sockets/clients/inc/: clients.hpp
src/kernel/sockets/clients/src/: clients.cpp
src/kernel/sockets/servers/inc/: servers.hpp
src/kernel/sockets/servers/src/: servers.cpp
src/managers/: CMakeLists.txt  common.hpp  factories.hpp
src/managers/commanders/inc/: commanders.hpp
src/managers/cpus/inc/: cpus.hpp
src/managers/gpus/inc/: gpus.hpp
src/managers/informations/inc/: informations.hpp
src/managers/informations/src/: informations.cpp
src/managers/motherboards/inc/: motherboards.hpp
src/managers/statistics/inc/: abstracts.hpp  statistics.hpp
src/managers/statistics/src/: abstracts.cpp  statistics.cpp
src/managers/web_interfaces/inc/: web_interfaces.hpp
src/managers/web_interfaces/src/: web_interfaces.cpp
src/systems/: CMakeLists.txt  common.hpp
src/systems/gpu_masters/: CMakeLists.txt  common.hpp
src/systems/gpu_masters/amds/inc/: amds.hpp
src/systems/gpu_masters/nvidias/inc/: nvidias.hpp
src/systems/informations/: CMakeLists.txt  common.hpp  factories.hpp
src/systems/informations/cpus/inc/: cpus.hpp
src/systems/informations/cpus/src/: cpus.cpp
src/systems/informations/gpus/inc/: gpus.hpp
src/systems/informations/motherboards/inc/: motherboards.hpp
src/systems/informations/motherboards/src/: motherboards.cpp
src/systems/masters/: CMakeLists.txt  common.hpp  factories.hpp
src/systems/masters/cpus/inc/: cpus.hpp
src/systems/masters/gpus/: CMakeLists.txt  common.hpp
src/systems/masters/gpus/inc/: abstracts.hpp  gpus.hpp
src/systems/masters/gpus/nvidias/inc/: nvidias.hpp
src/systems/masters/gpus/nvidias/src/: nvidias.cpp
src/systems/masters/gpus/src/: gpus.cpp
src/systems/masters/motherboards/inc/: motherboards.hpp
src/systems/overclocks/: CMakeLists.txt  common.hpp
src/systems/overclocks/amds/inc/: amds.hpp
src/systems/overclocks/amds/src/: amds.cpp
src/systems/overclocks/nvidias/inc/: nvidias.hpp
src/systems/shells/: CMakeLists.txt  common.hpp  factories.hpp
src/systems/shells/commands/inc/: abstracts.hpp  commands.hpp
src/systems/shells/commands/src/: commands.cpp
src/systems/shells/executors/inc/: executors.hpp
